# svlang

./: .gitignore  LICENSE  README.md  po4a.cfg  pyproject.toml  pyproject.toml.bak  svlang_0.1.5-1_all.deb
.github/workflows/: build-deb.yml  build-rpm.yml  release.yml  transifex-sync.yml
.tx/: config
data/: org.nylander.svlang.desktop
data/man/: svlang.1
po/: README.md  sv.po  svlang.pot
po/locale/sv/LC_MESSAGES/: svlang.mo
po/man/: sv.po  svlang.1.pot
src/svlang/: __init__.py  __init__.py.bak  cli.py
src/svlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/svlang/checkers/: __init__.py  compound.py  consistency.py  lexicon.py  readability.py  svengelska.py
src/svlang/data/: folkets_sv_en.tsv  sv_wordlist.txt
tests/: test_compound.py  test_consistency.py  test_lexicon.py  test_readability.py  test_svengelska.py
