[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "svlang"
version = "0.1.7"
description = "Swedish NLP toolkit for translators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
keywords = ["swedish", "nlp", "translation", "localization", "i18n", "l10n"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Swedish",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
po = ["polib>=1.2"]
dev = ["pytest>=7", "polib>=1.2"]

[project.scripts]
svlang = "svlang.cli:main"

[project.urls]
Homepage = "https://github.com/yeager/svlang"
Issues = "https://github.com/yeager/svlang/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
svlang = ["data/*.txt", "data/*.tsv"]
